plowshare (0.9.1svn) unstable; urgency=medium

  * [rapidshare] Add Premium-Zone upload
  * [zshare] Add delete function
  * [freakshare] Delete full module (now uses reCaptcha)
  * [download] Add --temp-directory option (saves partial download here before mv)
  * [download] Add -x/--no-overwrite option (do not overwrite existing files)
  * [filefactory] New module (free download)
  * [humyo] New module (free download)
  * [mediafire] update to website changes in free download

 -- Arnau Sanchez <tokland@gmail.com>  Sun, 21 Feb 2010 10:45:52 +0100

plowshare (0.9.1) stable; urgency=medium

  * Add 4 new modules (anonymous download): divshare.com, freakshare.net, 
    loadfiles.in, dl.free.fr
  * [zshare] Add anonymous upload
  * [download] Add --get-module option (aimed for wrappers to manage parallel download)
  * [download] Add -t/--timeout option (restrict time for download a link)
  * [download] Add --max-retries option (restrict attemps for loop, mostly captchas)
  * [rapidshare] add Premium-Zone download

 -- Arnau Sanchez <tokland@gmail.com>  Tue, 09 Feb 2010 12:43:07 +0100

plowshare (0.9) stable; urgency=medium

  * Add 7 new modules (anonymous download): netload.in, storage.to, uploaded.to, 
    uploading.com, sendspace, usershare, x7.to 
  * [lib] Fallback to img2txt (libcaca) if aview is not found.
  * [download] replace -l for -r.
  * [download] Add -i network_interface option

 -- Arnau Sanchez <tokland@gmail.com>  Thu, 10 Dec 2009 20:23:20 +0100

plowshare (0.8.1) stable; urgency=medium

  * Add plowdel executable
  * [plowdown] Add new -r RATE/--limit-rate=RATE option
  * [megaupload] Add delete support

 -- Arnau Sanchez <tokland@gmail.com>  Wed, 07 Oct 2009 22:45:53 +0200

plowshare (0.8) stable; urgency=low

  * Added module for depositfiles (download only)
  * [download] New option -o DIR, --output-directory=DIR
  * [megaupload] Use tesseract as OCR for the new simplier captcha
  * [megaupload] Support for multifetch uploads