@@ -11,7 +11,6 @@ _Plowshare_ is a command-line downloader and uploader for some of the most popul
 || [http://dl.free.fr dl.free.fr] || anonymous || no ||
 || [http://www.filefactory.com FileFactory] || anonymous || no ||
 || [http://www.humyo.com Humyo] || anonymous || no ||
-|| [http://www.loadfiles.in Loadfiles.in] || anonymous || no ||
 || [http://www.mediafire.com Mediafire] || anonymous || no ||
 || [http://www.megaupload.com Megaupload] || anonymous, free-membership and premium || anonymous, free-membership and premium (multifetch support) ||
 || [http://www.netload.in Netload.in] || anonymous || no ||
